# Automated-Events-Scraper

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  db_data_backup.sql  deploy-terminal.sh  deploy.sh  docker-compose.yml  dump_db.sh  main.py  old-db.csv  pyproject.toml  restore_data.sh
alembic/: README.md  env.py
alembic/versions/: 0804cf1c1c36_create_events_and_images_table.py  0b16486ce96e_category_column_added_to_events_table.py  (+8 more)
bco_org/: __init__.py  event_url_scraper.py  event_web_content_scraper.py
beedier/: __init__.py  create_category.py  create_event.py  delete_event.py  delete_media.py  update_event.py  upload_media.py
controllers/: __init__.py  get_all_targets.py  get_scrapers.py  run_scraper.py
dbcore/: __init__.py  create.py  enums.py  get.py  models.py  session.py  update.py
event_bright/: __init__.py  event_url_scraper.py  event_web_content_scraper.py
gemini_ai/: __init__.py  create_prompt.py  generate_content.py
llama_cpp_ai/: __init__.py  generate_content.py
nla_london/: __init__.py  event_url_scraper.py  event_web_content_scraper.py
ollama_ai/: __init__.py  generate_fine_tuning_input_dataset.py
pgadmin/: servers.json
riba/: __init__.py  event_url_scraper.py  event_web_content_scraper.py
selenium_webdriver/: __init__.py  chrome_driver.py  cookies_loader.py
structured_llm/: __init__.py  api.py  client.py  exceptions.py  grammar.py  validator.py
tests/: README.md  test_build_url_with_params.py  test_dateutils.py  test_image_processor.py  test_json_parser.py  test_text_utils.py
