[project]
name = "automated-events-scraper"
version = "0.1.0"
description = "Automated system that scrapes event data, metadata, and images from multiple websites with zero manual effort."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "beautifulsoup4>=4.13.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium>=4.34.0",
    "sqlalchemy>=2.0.41",
    "aiohttp>=3.12.14",
    "google-genai>=1.25.0",
    "pytest>=8.4.1",
]
